fdo#56366: INetURLObject::decode: do not clip utf-32 to 16-bit

Change-Id: Iaedc9f5b9f25f43b8b8deaf28129423abbb91672